# lz4-rs

./: .gitmodules  Cargo.toml
lz4-sys/: Cargo.toml  build.rs
lz4-sys/src/: lib.rs
src/: decoder.rs  encoder.rs  liblz4.rs
