[package]
name = "lz4"
license = "MIT"
version = "1.24.0-dev"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
description = "Rust LZ4 bindings library."
repository = "https://github.com/Systemcluster/lz4-rs"
documentation = "https://bozaro.github.io/lz4-rs/lz4/"

[[bin]]
name = "lz4"
test = false
doc = false

[workspace]
members = [
	".",
	"lz4-sys",
]

[dependencies]
libc = "^0.2"
lz4-sys = { git = "https://github.com/Systemcluster/lz4-rs", version = "^1.9.0-dev" }

[dev-dependencies]
rand = "^0.7"
